<resources>
    <string name="app_name">MeetUp</string>
    <string name="client_id" translatable="false">690493792343-529rjos66qcji22mnnm9v3quse1tfgd6.apps.googleusercontent.com</string>
    <string name="firebase_database_url" translatable="false">https://meetup-a3852-default-rtdb.firebaseio.com</string>
    <string name="project_number" translatable="false">690493792343</string>
    <string name="current_key" translatable="false">AIzaSyB72bVXs9edOC5wkctg7ctObZZB_B05-qQ</string>
    <string name="mobilesdk_app_id" translatable="false">1:690493792343:android:6c4295e03701cac7b48312</string>
    <string name="storage_bucket" translatable="false">meetup-a3852.appspot.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_sports">Sports</string>
    <string name="category_technology">Technology</string>
    <string name="category_music">Music</string>
    <string name="category_arts">Arts</string>
    <string name="category_traveling">Traveling</string>
    <string name="say_about_yourself">Say About yourself</string>
    <string name="next">NEXT</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="about">About</string>
    <string name="personal_information">Personal Information</string>
    <string name="phone_number">Phone number</string>
    <string name="birthday">Birthday</string>
    <string name="choose_upto_3_interest">Choose upto 3 interest</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="music">MUSIC</string>
    <string name="traveling">Traveling</string>
    <string name="arts">Arts</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">SignUp</string>
    <string name="already_have_a_account">Already have a account?</string>
    <string name="continue_with_facebook">Continue with facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="or">OR</string>
    <string name="username">Username</string>
    <string name="message">Message</string>
    <string name="logout">Logout</string>
    <string name="friends">Friends</string>
    <string name="editprofile">EditProfile</string>
    <string name="interested_in">Interested in</string>
    <string name="add_friends">Add friends</string>
    <string name="remove_friends">Remove friends</string>
    <string name="home">Home</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
</resources>