<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DuskyWhite">


 <TextView
     android:id="@+id/textView14"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="24dp"
     android:text="@string/choose_upto_3_interest"
     android:textColor="@color/blue"
     android:textSize="24sp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />

 <GridLayout
     android:id="@+id/gridLayout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:columnCount="1"
     android:padding="4dp"
     android:rowCount="12"
     android:layout_marginTop="16dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/textView14">

  <Button
      android:id="@+id/sports"
      android:layout_width="175dp"
      android:layout_height="75dp"
      android:layout_margin="4dp"
      android:textColor="@color/white"
      android:text="@string/sports" />

  <Button
      android:id="@+id/technology"
      android:layout_width="175dp"
      android:layout_height="75dp"
      android:layout_margin="4dp"
      android:textColor="@color/white"
      android:text="@string/technology" />

  <Button
      android:id="@+id/music"
      android:layout_width="175dp"
      android:layout_height="75dp"
      android:layout_margin="4dp"
      android:textColor="@color/white"
      android:text="@string/music" />

  <Button
      android:id="@+id/travel"
      android:layout_width="175dp"
      android:layout_height="75dp"
      android:layout_margin="4dp"
      android:textColor="@color/white"
      android:text="@string/traveling" />

  <Button
      android:id="@+id/arts"
      android:layout_width="175dp"
      android:layout_height="75dp"
      android:layout_margin="4dp"
      android:textColor="@color/white"
      android:text="@string/arts" />


 </GridLayout>

 <Button
     android:id="@+id/next"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="48dp"
     android:text="@string/next"
     android:textColor="@color/white"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.498"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/gridLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
